# sleap-roots-training

./: .gitattributes  .gitignore  README.md  pyproject.toml
.claude/commands/: cleanup-merged.md  copilot-review.md  coverage.md  fix-formatting.md  lint.md  new-feature.md  pr-description.md  pre-merge-check.md  prepare-release.md  review-openspec.md  review-pr.md  run-ci-locally.md  tdd.md  update-changelog.md  validate-env.md
.github/workflows/: build.yml  ci.yml  version.yml
docs/: CHANGELOG.md  roadmap.md  tf-reference.md  training-backend.md  training.md
docs/superpowers/plans/: 2026-07-24-phase-2-segmentation-roadmap-revision.md
docs/superpowers/specs/: 2026-07-24-phase-2-segmentation-roadmap-revision-design.md
examples/: arabidopsis_primary_cylinder.yaml
openspec/: project.md
openspec/changes/add-config-schema/: design.md  proposal.md  tasks.md
openspec/changes/add-config-schema/specs/training-config/: spec.md
openspec/changes/add-label-registry/: design.md  proposal.md  tasks.md
openspec/changes/add-label-registry/specs/label-registry/: spec.md
openspec/changes/add-label-registry/specs/model-registry/: spec.md
openspec/changes/add-tf-reference-fixtures/: design.md  proposal.md  tasks.md
openspec/changes/add-tf-reference-fixtures/specs/tf-reference/: spec.md
openspec/changes/add-train-backend-extra/: design.md  tasks.md
openspec/changes/add-train-backend-extra/specs/training-backend/: spec.md
openspec/changes/archive/2026-07-05-seed-production-model-registry/: tasks.md
openspec/changes/archive/2026-07-05-seed-production-model-registry/specs/model-registry/: spec.md
openspec/changes/archive/2026-07-23-add-tf-reference-fixtures/specs/test-fixtures/: spec.md
openspec/changes/archive/2026-07-23-add-train-backend-extra/: proposal.md  tasks.md
openspec/changes/archive/2026-07-23-update-wandb-credential-guard/: proposal.md
openspec/changes/seed-production-model-registry/: design.md  proposal.md  tasks.md
openspec/changes/update-wandb-credential-guard/: tasks.md
openspec/changes/update-wandb-credential-guard/specs/model-registry/: spec.md
openspec/specs/model-registry/: spec.md
openspec/specs/test-fixtures/: spec.md
openspec/specs/tf-reference/: spec.md
openspec/specs/training-backend/: spec.md
scripts/: pull_tf_reference.py  regen_model_checksums.py
src/sleap_roots_training/: __init__.py  cli.py  config.py
src/sleap_roots_training/registry/: __init__.py  cards.py  chooser.py  config.py  lineage.py  models.py  publish.py
src/sleap_roots_training/registry/data/: model_selection.yaml
tests/: conftest.py  test_backend_docs.py  test_cli_validate.py  test_config.py  test_config_integration.py  test_conftest_fixtures.py  test_examples_validate.py  test_gpu.py  test_registry_cards.py  test_registry_chooser.py  test_registry_cli.py  test_registry_config.py  test_registry_lineage.py  test_registry_models.py  test_registry_publish.py  test_registry_smoke.py  test_smoke.py  test_tf_reference.py  test_train_extra.py  test_training_docs.py
tests/fixtures/tf_reference/: 1tryadtu.config.json  1tryadtu.summary.json  26ryyfu2.config.json  26ryyfu2.summary.json  README.md  ijn85j6w.config.json  ijn85j6w.summary.json  nxe8xgsd.config.json  nxe8xgsd.summary.json  qilbptpp.config.json  qilbptpp.summary.json  v7rdm7cd.config.json  v7rdm7cd.summary.json  yenwgpjq.config.json  yenwgpjq.summary.json
