[project]
name = "sleap-roots-training"
version = "0.0.1a0"
description = "Config-driven training and evaluation of SLEAP root models on the sleap-nn backend."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "eberrigan", email = "eberrigan@salk.edu" }
]
requires-python = ">=3.11"
keywords = [
    "sleap",
    "roots",
    "phenotyping",
    "plant-science",
    "pose-estimation",
    "model-training",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "click>=8.0.0",
    "omegaconf>=2.3.0",
    "sleap-roots-contracts==0.1.0a3",
    "wandb>=0.28.0,<0.29.0",
]

[project.optional-dependencies]
# Phase-1 sleap-nn keypoint training backend (Tier 0.5, #9). Heavy + platform-specific,
# so kept out of the base install; CI never selects this extra. Capped below the
# unverified v0.3.0 / sleap-io 0.8.0 mask line (raise at the Tier 6 mask re-verify).
# CUDA torch is selected at install time on the GPU box (uv pip install ".[train]"
# --torch-backend=auto|cu124|cu126); see docs/training-backend.md.
train = [
    "sleap-nn>=0.2.0,<0.3.0",
    "sleap-io>=0.7.1,<0.8.0",
    "torch>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/talmolab/sleap-roots-training"
Repository = "https://github.com/talmolab/sleap-roots-training"
Issues = "https://github.com/talmolab/sleap-roots-training/issues"
Changelog = "https://github.com/talmolab/sleap-roots-training/blob/main/docs/CHANGELOG.md"

[project.scripts]
sleap-roots-training = "sleap_roots_training.cli:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "build>=1.3.0",
    "packaging>=24.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
]

[tool.black]
line-length = 88

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (slow, run real training/inference)",
]
